[package]
name = "rt"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
rand = "0.8.5"
glam = "0.28.0"
itertools = "0.13.0"
winit = "0.28"
pixels = "0.12"
env_logger = "0.11.3"

[profile.profiling]
inherits = "release"
debug = true
