[package]
name = "rt"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
rand = "0.8.5"
itertools = "0.13.0"
winit = "0.28"
pixels = "0.12"
env_logger = "0.11.5"
bvh = "0.10.0"
nalgebra = "0.33.0"
approx = "0.5.1"
image = "0.25.2"
enum_dispatch = "0.3.13"
tobj = "4.0.2"
hw-skymodel = "0.1.1"
gltf = "1.4.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bvh = { version = "0.10.0", features = ["simd"] }

[profile.profiling]
inherits = "release"
debug = true
